# sgx-oidc

./: .gitignore  Cargo.toml  README.md
attestation/: Cargo.toml  attestation.edl
client/: Cargo.toml
client/src/: main.rs
server/app/: Cargo.toml  Enclave_u.c  Enclave_u.h  Makefile
server/app/src/: main.rs
server/enclave/: Cargo.toml  Enclave.edl  Enclave_private.pem  Enclave_public.pem  Enclave_t.c  Enclave_t.h  Makefile
server/enclave/src/: attestation_report.rs  lib.rs
