[package]
name = "template"
version = "1.0.0"
authors = ["The Teaclave Authors"]
edition = "2018"

[lib]
name = "sample"            # Library name. If you change this, please reflect those changes in the Makefile on the variable ENCLAVE_CARGO_LIB
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies] # You can remove what you don't need, except types and tstd
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag = "v1.1.6" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = [
    "backtrace",
    "net",
], tag = "v1.1.6" }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag = "v1.1.6" }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag = "v1.1.6" }
sgx_tseal = { git = "https://github.com/apache/teaclave-sgx-sdk.git", tag = "v1.1.6" }
# sgx_serialize = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
# sgx_alloc = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
# sgx_libc = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

hex = { git = "https://github.com/mesalock-linux/rust-hex-sgx", rev = "sgx_1.1.3", default-features = false }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']

# [dependencies]
# log = { git = "https://github.com/mesalock-linux/log-sgx" }
# serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
# lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
# serde_cbor = { git = "https://github.com/mesalock-linux/cbor-sgx" }
# serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
# env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx" }
